# reroute-v3

./: .gitignore  README.md  SETUP_COMPLETE.md  pyproject.toml  requirements.txt  reroute-openapi.json
app/: main.py
app/ai/: openai_client.py  plan_agent.py
app/api/: routes.py
app/api/dependencies/: __init__.py  auth.py  db.py  plan.py  strava.py  tasks.py
app/api/v1/endpoints/: auth.py  plans.py  strava.py  users.py
app/core/: config.py
app/db/: session.py
app/models/: ai.py  base.py  strava.py  training.py  user.py
app/repositories/: ai.py  strava.py  training.py  user.py
app/schemas/: metrics.py  plan.py  strava.py  user.py
app/security/: auth0.py
app/services/: plan_factory.py  plan_service.py  strava.py  strava_api.py  stream_metrics.py  task_dispatcher.py
app/tasks/: plan_jobs.py
docs/plans/: 2025-10-31-ai-route-generation-design.md
migrations/: env.py
migrations/versions/: 0511de72ceb5_create_core_tables.py  0690f3d7709a_add_user_admin_fields.py  6a2fa0a7b6e8_add_ai_execution_logs.py  9e9f0b80e8ca_add_training_plan_tables.py
tests/: conftest.py
tests/api/: test_auth_session.py  test_authentication.py  test_plans.py  test_strava_activities.py  test_strava_callback.py  test_strava_connect.py  test_strava_webhook.py  test_users.py
tests/repositories/: test_strava_repository.py  test_training_repository.py  test_user_repository.py
tests/services/: test_plan_service_context.py  test_strava_service.py  test_stream_metrics.py
